Add point field, enable changing keyword colors and change some fonts

--- a/ntu-cooler/public/index.html
+++ b/ntu-cooler/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Arimo&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arimo&family=Bebas+Neue&family=Potta+One&family=Staatliches&family=Crete+Round&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
